--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.exasol</groupId>
     <artifactId>jdbc-factory</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
 
     <name>Jdbc Connection Factory</name>
