--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,22 @@
             <version>3.2.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- testing with exasol testcontainers -->
+        <dependency>
+            <groupId>com.exasol</groupId>
+            <artifactId>exasol-testcontainers</artifactId>
+            <version>2.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- junit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
