--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.exasol</groupId>
     <artifactId>jdbc-factory</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3</version>
 
 
     <name>Jdbc Connection Factory</name>
@@ -14,15 +14,14 @@
 
 
     <organization>
-	<name>Exasol AG</name>
-	<url>https://www.exasol.com</url>
+        <name>Exasol AG</name>
+        <url>https://www.exasol.com</url>
     </organization>
 
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 
 
     <repositories>
@@ -50,7 +49,7 @@
             <groupId>com.exasol</groupId>
             <artifactId>exasol-jdbc</artifactId>
             <!-- newer drivers have insane windows / java 9 dependencies -->
-            <version>6.1.2</version>
+            <version>6.2.3</version>
             <scope>compile</scope>
         </dependency>
 
@@ -76,10 +75,22 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
-
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.23.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources-mvn</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -89,7 +100,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-	</plugins>
+        </plugins>
     </build>
 
 </project>
