--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.exasol</groupId>
     <artifactId>jdbc-factory</artifactId>
-    <version>1.3</version>
+    <version>1.3.1</version>
 
 
     <name>Jdbc Connection Factory</name>
@@ -48,8 +48,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-jdbc</artifactId>
-            <!-- newer drivers have insane windows / java 9 dependencies -->
-            <version>6.2.3</version>
+            <version>7.1.4</version>
             <scope>compile</scope>
         </dependency>
 
@@ -57,7 +56,7 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
-            <version>3.2.1</version>
+            <version>3.8.4</version>
             <scope>compile</scope>
         </dependency>
 
@@ -65,21 +64,21 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>2.0.0</version>
+            <version>6.1.1</version>
             <scope>test</scope>
         </dependency>
         <!-- junit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.0</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>2.23.4</version>
+            <version>4.3.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -99,6 +98,13 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+
+            <!-- offers checking of available versions, useful to find updates -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.5</version>
             </plugin>
         </plugins>
     </build>
