--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 /.idea/
 /jdbc-factory.iml
 /target/
+.DS_Store
+*.swp
+local
+.dbeaver*
+**/*.log
+.directory
+venv/
+.idea
+*.iml
+target
+.cache
+dependency-reduced-pom.xml
+.project
+.classpath
+pom.xml.versionsBackup
+~*
+*.lock
+*.bak
+*.orig
+*.old
+*.md.html
+*.flattened-pom.xml
