--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ pom.xml.versionsBackup
 *.old
 *.md.html
 *.flattened-pom.xml
+/.settings/org.eclipse.core.resources.prefs
+/.settings/org.eclipse.jdt.apt.core.prefs
