--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
                 <artifactId>project-keeper-maven-plugin</artifactId>
                 <version>2.9.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <parent>
