--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.0.0</version>
+            <version>3.12.4</version> <!-- Use older version that still supports Java 8 -->
             <scope>test</scope>
         </dependency>
     </dependencies>
