--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ pom.xml.versionsBackup
 *.flattened-pom.xml
 /.settings/org.eclipse.core.resources.prefs
 /.settings/org.eclipse.jdt.apt.core.prefs
+/.settings/org.eclipse.m2e.core.prefs
