--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>exasol-jdbc-connection-factory</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.1</version>
     <name>Jdbc Connection Factory</name>
     <description>Simple class to create Connections to Exasol databases</description>
     <url>https://github.com/exasol/exasol-jdbc-connection-factory/</url>
@@ -12,35 +12,35 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-jdbc</artifactId>
-            <version>7.1.16</version>
+            <version>7.1.20</version>
             <scope>compile</scope>
         </dependency>
         <!-- Maven Versioning Stuff -->
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
-            <version>3.8.6</version>
+            <version>3.9.3</version>
             <scope>compile</scope>
         </dependency>
         <!-- testing with exasol testcontainers -->
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>6.4.0</version>
+            <version>6.6.0</version>
             <scope>test</scope>
         </dependency>
         <!-- junit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.1</version>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
         <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.9.0</version>
+            <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -55,14 +55,14 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.9.7</version>
             </plugin>
         </plugins>
     </build>
     <parent>
         <artifactId>exasol-jdbc-connection-factory-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.4.0</version>
+        <version>1.4.1</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
