--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>exasol-jdbc-connection-factory</artifactId>
-    <version>1.4.2</version>
+    <version>1.4.3</version>
     <name>Jdbc Connection Factory</name>
     <description>Simple class to create Connections to Exasol databases</description>
     <url>https://github.com/exasol/exasol-jdbc-connection-factory/</url>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>6.6.0</version>
+            <version>6.6.1</version>
             <scope>test</scope>
         </dependency>
         <!-- junit 5 -->
@@ -43,6 +43,13 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Enable logging for integration tests -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.7</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <resources>
@@ -55,14 +62,14 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.9.7</version>
+                <version>2.9.9</version>
             </plugin>
         </plugins>
     </build>
     <parent>
         <artifactId>exasol-jdbc-connection-factory-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.4.2</version>
+        <version>1.4.3</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
